<resources>
    <string name="app_name">ComicR</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="name">HI, HAI</string>
    <string name="setting">Setting</string>
    <string name="notify_favorite">Chưa có truyện yêu thích</string>
    <string name="hint_search">Nhập tên truyện cần tìm</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="use_name">USE NAME</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register?</string>
</resources>