<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/img"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center"

        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="45sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:orientation="vertical"
        android:gravity="center"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/edt_use_name"
                android:layout_marginTop="19dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botron"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_name"
                android:textSize="15sp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            >
            <EditText
                android:id="@+id/edt_password"
                android:layout_marginTop="19dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botron"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                />
            <TextView

                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PASSWORD"
                android:textSize="15sp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="15dp"
                />
            <ImageView
                android:padding="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_lock_open_24"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25sp"
                android:layout_marginRight="7dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            >

            <Switch
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/remember_me"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="19dp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/forgot_password"
                android:textSize="12sp" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:text="@string/log_in"
            android:background="@drawable/botron"
            />



    </LinearLayout>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/register"
        android:textSize="12sp"
        android:gravity="center"
        android:paddingBottom="20dp"
        />

</LinearLayout>